# breathe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: auto-release.yml  helm-release.yml  image.yml  retirada-ci-watch.yml
breathe-actuator/: Cargo.toml
breathe-actuator/src/: lib.rs
breathe-admission/: Cargo.toml
breathe-admission/src/: lib.rs  tests.rs
breathe-api-server/: Cargo.toml  build.rs
breathe-api-server/proto/: breathe.proto
breathe-api-server/src/: lib.rs  main.rs
breathe-apicall/: Cargo.toml
breathe-apicall/src/: lib.rs
breathe-apprpc/: Cargo.toml
breathe-apprpc/src/: lib.rs
breathe-auction/: Cargo.toml
breathe-auction/src/: lib.rs  o6_dag.rs  quinhao.rs  tests.rs  zone.rs
breathe-auction/src/quinhao/: proptests.rs  tests.rs
breathe-auction/src/zone/: tests.rs
breathe-catalog/: Cargo.toml
breathe-catalog/goldens/: README.md  camelot-global-breathe.golden.yaml
breathe-catalog/src/: builder.rs  cost.rs  db_matrix.rs  forma.rs  handle.rs  lib.rs  preset.rs  render.rs
breathe-config/: Cargo.toml
breathe-config/src/: envprofile.rs  lib.rs
breathe-configreload/: Cargo.toml
breathe-configreload/src/: lib.rs
breathe-control/: Cargo.toml
breathe-control/src/: carve_safety.rs  lapidar.rs  lib.rs  lifecycle.rs  replica.rs
breathe-controller/: Cargo.toml
breathe-controller/src/: app_band.rs  eks_nodegroup_provedor.rs  karpenter_provedor.rs  kube_param.rs  main.rs  nats_trigger.rs  node_forma.rs  origin_guard.rs  pod_memory_high.rs  quinhao.rs  replica_band.rs
breathe-core/: Cargo.toml
breathe-core/src/: lib.rs
breathe-crd/: Cargo.toml
breathe-crd/src/: lib.rs  posture.rs
breathe-dimensions/: Cargo.toml
breathe-dimensions/src/: lib.rs
breathe-facade/: Cargo.toml
breathe-facade/src/: lib.rs
breathe-host/: Cargo.toml
breathe-host-agent/: Cargo.toml
breathe-host-agent/src/: main.rs
breathe-host/src/: lib.rs
breathe-jmx/: Cargo.toml
breathe-jmx/src/: lib.rs
breathe-kube/: Cargo.toml
breathe-kube/src/: kube_cluster.rs  lib.rs  managed_fields.rs  pod_cgroup.rs  replica_env.rs
breathe-mcp/: Cargo.toml
breathe-mcp/src/: lib.rs  main.rs
breathe-provider/: Cargo.toml
breathe-provider/src/: lib.rs
breathe-provision/: Cargo.toml
breathe-provision/src/: lib.rs  sim.rs  tests.rs
breathe-retirada-ci/: Cargo.toml
breathe-retirada-ci/src/: lib.rs
breathe-runtime/: Cargo.toml
breathe-runtime/src/: lib.rs
breathe-store/: Cargo.toml
breathe-store/migrations/: 0001_band_registry.sql  0002_decision_log.sql
breathe-store/src/: lib.rs  pg.rs
charts/pleme-breathe/: Chart.yaml  values.yaml
charts/pleme-breathe/crds/: bands.yaml  memoryband.yaml
charts/pleme-breathe/templates/: daemonset.yaml  deployment.yaml  priorityclass.yaml  rbac.yaml
crates/breathe-auction/: Cargo.toml  DOCTRINE.md
crates/breathe-auction/specs/: auction.lisp
crates/breathe-auction/src/: lib.rs  spread.rs
crates/breathe-auction/tests/: auction_spread_matrix.rs
crates/breathe-invariant/: Cargo.toml
crates/breathe-invariant/specs/: breathe-invariant.lisp
crates/breathe-invariant/src/: carve.rs  catalog.rs  check.rs  clause.rs  database.rs  dimension.rs  fixture.rs  isolation.rs  lib.rs  setpoint.rs
crates/breathe-invariant/tests/: breathe_dimension_matrix.rs  database_architecture_matrix.rs
crates/breathe-lifecycle/: Cargo.toml
crates/breathe-lifecycle/src/: breaker.rs  drift.rs  fsm.rs  lib.rs
crates/breathe-lifecycle/src/breaker/: tests.rs
crates/breathe-lifecycle/src/drift/: tests.rs
crates/breathe-lifecycle/src/fsm/: tests.rs
crates/breathe-lifecycle/tests/: camelot_shadow_integration.rs
crates/breathe-spread/: Cargo.toml  DOCTRINE.md
crates/breathe-spread/specs/: auction.lisp
crates/breathe-spread/src/: axis.rs  invariant.rs  lib.rs
crates/breathe-spread/tests/: auction_spread_matrix.rs
dimension-memory/: Cargo.toml
dimension-memory/src/: lib.rs
docs/: BREATHABILITY-MATH.md  BREATHABILITY-PRIOR-ART.md  BREATHABILITY-THESIS.md  BREATHABLE-SUBSTRATE.md  BREATHE-MICROSERVICE.md  BREATHE.md  OOM-VERIFICATION.md  PROVISIONING.md
spec/: breathe.openapi.yaml
specs/: dimensions.lisp  presets.lisp
