# breathe — the resource-homeostasis substrate (theory/BREATHE.md).
# One running controller, one proven dimension-agnostic band law, a catalog of
# pluggable resident-problem-category providers. Each member crate publishes to
# crates.io via AUTO-RELEASE; the controller image ships to ghcr.
[workspace]
resolver = "2"
members = [
  "breathe-control",   # the proven, pure, dimension-agnostic balancing core
  "breathe-provider",  # the ResourceProvider + Cluster traits (no controller dep)
  "breathe-admission", # validated-resource admission FSM + Admitido<T> + Viveiro (provisioning M1)
  "breathe-auction",   # the predict→optimize→auction decision layer (provisioning; single-forma solved, Otimizador deferred)
  "breathe-core",      # the composed reconcile loop (observe → plan → assign)
  "breathe-catalog",   # the self-describing dimensions catalog (CATALOG REFLECTION)
  "breathe-kube",      # the Kubernetes Cluster impl + managedFields ownership parser
  "breathe-crd",       # the MemoryBand CRD (typed enrollment contract)
  "breathe-controller", # the controller binary (watch MemoryBand → reconcile_one)
  "breathe-dimensions", # the concrete DimensionDescriptors (memory/storage/cpu)
  "breathe-host",      # the HostCluster Cluster impl — the host I/O boundary (ARC/cgroup)
  "breathe-runtime",   # shared reconcile glue (status mapping + patch) — brain ⟂ hands no-drift
  "breathe-host-agent", # the HANDS binary — DaemonSet host reconcile loop (ArcBand/CgroupBand)
  "breathe-facade",    # the typed CRD facade (BreatheStore) — shared by every API surface
  "breathe-mcp",       # the MCP surface — a model drives breathe (bands/nodepools over kube-rs)
  "breathe-api-server", # the REST surface (axum) over the same facade
]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/breathe"

[workspace.lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
