# breathe — the resource-homeostasis substrate (theory/BREATHE.md).
# One running controller, one proven dimension-agnostic band law, a catalog of
# pluggable resident-problem-category providers. Each member crate publishes to
# crates.io via AUTO-RELEASE; the controller image ships to ghcr.
[workspace]
resolver = "2"
members = [
  "breathe-control",   # the proven, pure, dimension-agnostic balancing core
  "breathe-provider",  # the ResourceProvider + Cluster traits (no controller dep)
  "breathe-admission", # validated-resource admission FSM + Admitido<T> + Viveiro (provisioning M1)
  "breathe-auction",   # the predict→optimize→auction decision layer (provisioning; single-forma solved, Otimizador deferred)
  "breathe-provision", # the closed reconcile_forma loop (observe→decide→provision→validated admission) — the substrate composed end-to-end
  "breathe-core",      # the composed reconcile loop (observe → plan → assign)
  "breathe-catalog",   # the self-describing dimensions catalog (CATALOG REFLECTION)
  "breathe-kube",      # the Kubernetes Cluster impl + managedFields ownership parser
  "breathe-crd",       # the MemoryBand CRD (typed enrollment contract)
  "breathe-controller", # the controller binary (watch MemoryBand → reconcile_one)
  "breathe-dimensions", # the concrete DimensionDescriptors (memory/storage/cpu)
  "breathe-apprpc",    # the AppRpcCluster impl (app admin endpoint — GOMEMLIMIT/prefetch/concurrency)
  "breathe-configreload", # the ConfigReloadCluster impl (config-file edit + SIGHUP/RELOAD — pgbouncer/nginx/PG)
  "breathe-apicall",   # the ApiCallCluster impl (protocol CONFIG SET — Redis/Kafka/NATS)
  "breathe-jmx",       # the JmxCluster impl (JVM MBean over Jolokia — HikariCP/Tomcat/Caffeine)
  "breathe-actuator",  # the ActuatorCluster sum type — routes AppBand → the 4 app-plane actuators (read_used via metric KubeCluster)
  "breathe-host",      # the HostCluster Cluster impl — the host I/O boundary (ARC/cgroup)
  "breathe-store",     # the durable-store seam — DecisionLog (single counter fold + append-only feed) + SampleCache; InMem today, Postgres/Redis (M2/M3) behind one config switch
  "breathe-config",    # the shikumi BreatheServiceConfig root — the typed scale.{store,cache,coordination} surface; prescribed_default = VERY-SMALL (byte-identical to today), EXTREME = same root, different enum arms
  "breathe-runtime",   # shared reconcile glue (status mapping + patch) — brain ⟂ hands no-drift
  "breathe-host-agent", # the HANDS binary — DaemonSet host reconcile loop (ArcBand/CgroupBand)
  "breathe-facade",    # the typed CRD facade (BreatheStore) — shared by every API surface
  "breathe-mcp",       # the MCP surface — a model drives breathe (bands/nodepools over kube-rs)
  "breathe-api-server", # the REST surface (axum) over the same facade
  # correnteza M0 (theory/CORRENTEZA.md) — folded in from its own standalone
  # workspace root so `breathe-controller` can depend on it: Cargo refuses a
  # path dependency onto a NESTED directory that also declares its own
  # `[workspace]` ("multiple workspace roots found in the same workspace"),
  # so isolation-via-nested-[workspace] only works for a crate nothing in this
  # workspace ever depends on. This crate's own doc named exactly this move as
  # its follow-up ("fold into the breathe workspace members ... once the
  # concurrent band-crate work lands") — this IS that band-crate work.
  "crates/breathe-spread", # the ARCH × AUCTION × SPOT config-spread lock (Lane/AuctionSpread) — renamed from breathe-auction, see its Cargo.toml header
]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/breathe"

[workspace.lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
