[package]
name = "breathe-admission"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Validated-resource admission — the phantom-typestate FSM + the Admitido<T> proof-carrying wrapper + the Viveiro pool that makes an unvalidated resource UNREPRESENTABLE in the valid pool (docs/PROVISIONING.md §2.3)."

[dependencies]
breathe-provider = { path = "../breathe-provider", version = "0.1.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
schemars = "0.8"

[lints]
workspace = true
