[package]
name = "breathe-auction"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The predict → optimize → auction decision layer for the breathe provisioning extension. The single-forma case is the proven band law lifted to a DecisaoForma; the multi-forma joint planner (Otimizador) is the explicitly-deferred hard arbitration (docs/PROVISIONING.md §2.4, §5)."

[dependencies]
breathe-control = { path = "../breathe-control", version = "0.1.0" }
breathe-provider = { path = "../breathe-provider", version = "0.1.0" }

[dev-dependencies]
proptest = "1"
# Dev-only: proves theory/BREATHABILITY.md §II.6.8's O6 claim (cross-surface
# structural dependency resolved as a shigoto Dag) against shigoto's REAL
# API, for the concrete camelot 17-pod incident -- a worked example, not
# production wiring (the real per-tick controller integration is a named
# follow-up, tracked in the theory doc, not this crate).
shigoto-types = "0.1.10"
shigoto-dag = "0.1.10"

[lints]
workspace = true
