[package]
name = "breathe-auction"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The predict → optimize → auction decision layer for the breathe provisioning extension. The single-forma case is the proven band law lifted to a DecisaoForma; the multi-forma joint planner (Otimizador) is the explicitly-deferred hard arbitration (docs/PROVISIONING.md §2.4, §5)."

[dependencies]
breathe-control = { path = "../breathe-control", version = "0.1.0" }
breathe-provider = { path = "../breathe-provider", version = "0.1.0" }
# Promoted from a dev-only worked-example dependency (2026-07-17): `zone`
# below is a real, reusable library surface -- theory/BREATHABILITY.md
# §II.6.8's "breathable autonomous zone" mechanism, consuming
# breathe-catalog's ALREADY-SHIPPED `DimensionSpec.depends_on` DAG (never
# previously consumed for tick-time ordering, only rendered to JSON) via
# shigoto's real Dag/JobId types.
breathe-catalog = { path = "../breathe-catalog", version = "0.1.0" }
shigoto-types = "0.1.10"
shigoto-dag = "0.1.10"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
