[package]
name = "breathe-control"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The proven, dimension-agnostic band law + field-granular single-writer guard for the breathe homeostasis substrate (theory/BREATHE.md §2)."

[dependencies]
# Intentionally dependency-free. The whole thesis: the balancing algebra is
# solved once, in std, provably; every resident problem category projects into
# (used, capacity) and runs this exact law unchanged.

[lints]
workspace = true
