[package]
name = "breathe-controller"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The breathe controller binary — watches MemoryBand CRs and runs the composed reconcile loop (observe → plan → assign) per target via the real KubeCluster (theory/BREATHE.md M1)."

[[bin]]
name = "breathe-controller"
path = "src/main.rs"

[dependencies]
breathe-control = { path = "../breathe-control", version = "0.1.0" }
breathe-provider = { path = "../breathe-provider", version = "0.1.0" }
breathe-core = { path = "../breathe-core", version = "0.1.0" }
breathe-crd = { path = "../breathe-crd", version = "0.1.0" }
breathe-kube = { path = "../breathe-kube", version = "0.1.0" }
breathe-actuator = { path = "../breathe-actuator", version = "0.1.0" }
breathe-dimensions = { path = "../breathe-dimensions", version = "0.1.0" }
breathe-runtime = { path = "../breathe-runtime", version = "0.1.0" }
breathe-store = { path = "../breathe-store", version = "0.1.0", features = ["postgres"] }
breathe-config = { path = "../breathe-config", version = "0.1.0" }
# BU1 — node-tier shadow loop (reconcile_forma wired into the running controller)
breathe-provision = { path = "../breathe-provision", version = "0.1.0" }
breathe-auction = { path = "../breathe-auction", version = "0.1.0" }
breathe-admission = { path = "../breathe-admission", version = "0.1.0" }
# correnteza M0 — the compute/auction permutation-space lock (Lane/AuctionSpread).
# Was package-named `breathe-auction` too (a real collision with the elasticity
# engine above, since Cargo refuses two same-named local packages in one
# resolve graph) — renamed to `breathe-spread` (theory/CORRENTEZA.md §1.2) so
# both coexist here with no alias needed.
breathe-spread = { path = "../crates/breathe-spread", version = "0.1.0" }
async-trait = "0.1"
# eks_nodegroup_provedor (task #205) — the EksManagedNodegroup backend's real
# AWS calls (DescribeNodegroup + UpdateNodegroupConfig). Same major-version
# pin discipline as crates/breathe-lifecycle's aws-sdk-ec2 dev-dependency —
# one AWS SDK release train fleet-wide. Still no direct
# `autoscaling:SetDesiredCapacity`/`UpdateAutoScalingGroup` call anywhere in
# this backend -- EKS owns + continuously reconciles a managed nodegroup's
# underlying ASG's scalingConfig, so writing desiredSize/minSize/maxSize
# through the ASG API directly would race EKS's own control loop (see
# eks_nodegroup_provedor.rs's module doc). aws-sdk-autoscaling below is used
# for EXACTLY ONE, orthogonal purpose instead: SetInstanceProtection, a
# per-instance attribute EKS's own reconciliation never touches or contests
# (it is not part of scalingConfig) -- confirmed live 2026-07-23: breathe's
# own desiredSize shrinks were selecting a currently-busy CI-runner instance
# for termination roughly every 60-90s (real CloudTrail evidence, the
# runner-instability investigation), because "which instance" is the ASG's
# own choice with zero Kubernetes awareness (this backend's own module doc
# already named this gap: "no amount of client-side cleverness closes it").
# Scale-in protection closes it from underneath, without touching
# desiredSize/capacity math at all -- see sync_instance_protection.
aws-config = { version = "=1.8.18", features = ["behavior-version-latest"] }
aws-sdk-eks = "=1.137.0"
# Verified same-cohort release: 1.121.0 shipped 2026-06-30, the exact date
# aws-sdk-eks 1.137.0 above shipped (per crates.io's own version history) --
# one AWS SDK release train fleet-wide, not an independently-chosen version.
aws-sdk-autoscaling = "=1.121.0"
# DisplayErrorContext -- SdkError's own Display truncates ServiceError to the
# literal string "service error" (aws-smithy-runtime-api's Display impl);
# DisplayErrorContext walks the full std::error::Error source() chain to
# surface the real AWS error code + message instead.
aws-smithy-types = "=1.5.0"
# NATS reactive-reconcile trigger (task #90, nervous-system integration) — the
# same 0.35 pin escuta uses, for one version across the fleet's NATS clients.
async-nats = "0.35"
kube = { version = "0.96", features = ["client", "runtime", "derive", "rustls-tls", "unstable-runtime"], default-features = false }
# Explicit process-wide CryptoProvider install (main.rs) -- the workspace
# resolves BOTH rustls 0.21 (ring-only) and 0.23 (aws-lc-rs + ring) across
# different transitive consumers, so rustls 0.23's own single-feature
# auto-detection is ambiguous and panics at the first TLS use ("Could not
# automatically determine the process-level CryptoProvider") -- confirmed
# live 2026-07-18, crash-looping the deployed controller. aws-lc-rs is
# already the real backend present in the tree (kube-rs's rustls-tls
# resolves it); pin explicitly so the choice is never ambiguous again.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_json = "1.0"
thiserror = "2"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

[lints]
workspace = true
