[package]
name = "breathe-crd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The MemoryBand CRD (breathe.pleme.io/v1) — the typed per-target enrollment contract; the controller reconciles only declared bands (theory/BREATHE.md §4)."

[dependencies]
breathe-control = { path = "../breathe-control", version = "0.1.0" }
kube = { version = "0.96", features = ["derive"], default-features = false }
k8s-openapi = { version = "0.23", features = ["latest"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
parse-size = "1.1"
anyhow = "1"

[lints]
workspace = true
