[package]
name = "breathe-crd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The MemoryBand CRD (breathe.pleme.io/v1) — the typed per-target enrollment contract; the controller reconciles only declared bands (theory/BREATHE.md §4)."

[dependencies]
breathe-control = { path = "../breathe-control", version = "0.1.0" }
breathe-provider = { path = "../breathe-provider", version = "0.1.0" }
breathe-auction = { path = "../breathe-auction", version = "0.1.0" }
# The generic progressive-authority promotion FSM (shadow → confirm → effect,
# + a fleet freeze) — a k8s-free lift of THIS crate's own `Band` promotion
# lifecycle, extracted 2026-06-30 into formigueiro so it and breathe share one
# tested FSM. Not yet on crates.io — pinned by git rev for reproducibility.
outorga = { git = "https://github.com/pleme-io/formigueiro", rev = "88b91e58292450e7a2884683f711c3009595d425" }
kube = { version = "0.96", features = ["derive"], default-features = false }
k8s-openapi = { version = "0.23", features = ["latest"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[lints]
workspace = true
