[package]
name = "breathe-facade"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The typed facade over breathe's k8s CRD state — the BreatheStore trait (KubeStore real / mockable) shared by every surface (MCP, REST, gRPC, GraphQL). The CRDs ARE the state; this is a typed projection + mutation morphism over kube::Api<T>, not a second store. Solved once so all surfaces drive the same core."

[dependencies]
breathe-crd = { path = "../breathe-crd", version = "0.1.0" }
breathe-catalog = { path = "../breathe-catalog", version = "0.1.0" }
kube = { version = "0.96", features = ["client", "runtime", "derive", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.23", features = ["latest"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
schemars = "1"          # 1.x — matches rmcp 0.15, so BandKind's JsonSchema works in MCP tool inputs
thiserror = "2"

[lints]
workspace = true
