[package]
name = "breathe-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The HostCluster Cluster impl — breathe's HOST I/O boundary (systemd/sysfs/procfs). The hands that apply host-dimension decisions (ZFS ARC, transient cgroup MemoryHigh) WITHIN the static nodeBudget L2 envelopes. Mirrors KubeCluster; reuses the one BandProvider. Side effects abstracted behind the HostEnvironment trait (the typed-spec-triplet testability seam)."

[dependencies]
breathe-control = { path = "../breathe-control", version = "0.1.0" }
breathe-provider = { path = "../breathe-provider", version = "0.1.0" }
async-trait = "0.1"

[dev-dependencies]
breathe-provider = { path = "../breathe-provider", version = "0.1.0", features = ["mock"] }
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
