[package]
name = "breathe-jmx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The JmxCluster Cluster impl — breathe's APP-RUNTIME JVM I/O boundary (JMX/Jolokia MBean knobs). The hands that carve live JVM tunables (HikariCP maxPoolSize, Tomcat/Jetty maxThreads, Caffeine maximumSize, JVM SoftMaxHeapSize) over a Jolokia HTTP bridge. Mirrors HostCluster; reuses the one BandProvider via LimitLayout::ApiCall. Side effects abstracted behind the JmxEnv trait (the typed-spec-triplet testability seam)."

[dependencies]
breathe-control = { path = "../breathe-control", version = "0.1.0" }
breathe-provider = { path = "../breathe-provider", version = "0.1.0" }
async-trait = "0.1"

[dev-dependencies]
breathe-provider = { path = "../breathe-provider", version = "0.1.0", features = ["mock"] }
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
